--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .cardContainer {
-    min-height: 65vh;
+    min-height: 80vh;
     width: 48em;
     border-radius: 30px;
     padding: 0 6em;
@@ -32,6 +32,7 @@ body {
 .sneaker img {
     width: 32em;
     position: relative;
+    transition: all 0.75s ease-out;
 }
 
 .circle {
@@ -46,12 +47,14 @@ body {
     font-size: 4em;
     font-weight: bold;
     padding-bottom: .5em;
+    transition: all 0.75s ease-out;
 }
 
 .info h3 {
     font-size: 2em;
     padding: .1em 0;
     color: lightslategrey;
+    transition: all 0.75s ease-out;
 }
 
 .sizes button {
@@ -64,6 +67,7 @@ body {
     font-weight: bold;
     font-size: large;
     color: #343434;
+    transition: all 0.75s ease-out;
 }
 
 button.active {
@@ -73,6 +77,7 @@ button.active {
 
 .purchase {
     margin-top: 5em;
+    transition: all 0.75s ease-out;
 }
 
 .purchase button {
