--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .cardContainer {
-    max-height: 40em;
+    min-height: 45em;
     width: 27em;
     border-radius: 30px;
     padding: 0 6em;
@@ -33,6 +33,7 @@ body {
     width: 17em;
     position: relative;
     transition: all 0.75s ease-out;
+    margin-top: 3em;
 }
 
 .circle {
@@ -41,6 +42,8 @@ body {
     background: linear-gradient(45deg, #d3e05e, #7cb9dc, #3068ae );
     position: absolute;
     border-radius: 50%;
+    margin-top: 3em;
+
 }
 
 .title {
@@ -52,7 +55,7 @@ body {
 }
 
 .info h3 {
-    font-size: 1.5em;
+    font-size: 1.3em;
     padding: .1em 0;
     color: lightslategrey;
     transition: all 0.75s ease-out;
@@ -79,13 +82,14 @@ button.active {
 .purchase {
     margin-top: 5em;
     transition: all 0.75s ease-out;
+    font-size: small;
 }
 
 .purchase button {
     width: 100%;
     height: 2em;
     padding: 0;
-    margin-bottom: 2em;
+    margin: 0 0 3em 0;
     background: #d3e05e;
     border: none;
     color: #343434;
